--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ValidationSettings": {
+    "PasswordMinLength": 8
+  }
 }
