--- a/UserService/UserService.csproj
+++ b/UserService/UserService.csproj
@@ -23,6 +23,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\Common.Web\Common.Web.csproj" />
   </ItemGroup>
 </Project>
