--- a/infra/.env
+++ b/infra/.env
@@ -1,4 +1,14 @@
-POSTGRES_USER=dekel
-POSTGRES_PASSWORD=strongpass123
-POSTGRES_DB=usersdb
-POSTGRES_PORT=5432
+# === UserService Database ===
+USERSERVICE_DB_USER=dekel
+USERSERVICE_DB_PASSWORD=strongpass123
+USERSERVICE_DB_NAME=usersdb
+USERSERVICE_DB_PORT=5432
+
+# === UserService App ===
+USERSERVICE_PORT=5125
+
+# === AuthService Database ===
+AUTHSERVICE_DB_USER=dekel
+AUTHSERVICE_DB_PASSWORD=supersecureauth
+AUTHSERVICE_DB_NAME=authdb
+AUTHSERVICE_DB_PORT=5433
