--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,18 +1,45 @@
 version: "3.8"
 
 services:
-  postgres:
+  userservice-db-srv:
     image: postgres:16
-    container_name: users-db
+    container_name: userservice-db
     restart: always
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${USERSERVICE_DB_USER}
+      POSTGRES_PASSWORD: ${USERSERVICE_DB_PASSWORD}
+      POSTGRES_DB: ${USERSERVICE_DB_NAME}
     ports:
-      - "5432:5432"
+      - "${USERSERVICE_DB_PORT}:5432"
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - userservice-data:/var/lib/postgresql/data
+
+  userservice-srv:
+    build:
+      context: ../UserService
+      dockerfile: Dockerfile
+    container_name: userservice
+    depends_on:
+      - userservice-db-srv
+    environment:
+      ASPNETCORE_ENVIRONMENT: Production
+      CONNECTIONSTRINGS__USERSDB: Host=userservice-db-srv;Port=5432;Database=${USERSERVICE_DB_NAME};Username=${USERSERVICE_DB_USER};Password=${USERSERVICE_DB_PASSWORD}
+    ports:
+      - "${USERSERVICE_PORT}:5125"
+
+  authservice-db-srv:
+    image: postgres:16
+    container_name: authservice-db
+    restart: always
+    environment:
+      POSTGRES_USER: ${AUTHSERVICE_DB_USER}
+      POSTGRES_PASSWORD: ${AUTHSERVICE_DB_PASSWORD}
+      POSTGRES_DB: ${AUTHSERVICE_DB_NAME}
+    ports:
+      - "${AUTHSERVICE_DB_PORT}:5432"
+    volumes:
+      - authservice-data:/var/lib/postgresql/data
 
 volumes:
-  postgres-data:
+  userservice-data:
+  authservice-data:
