Refactored error response to fil with RFC REST rules

--- a/UserService.Tests/UserService.Tests.csproj
+++ b/UserService.Tests/UserService.Tests.csproj
@@ -25,7 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\UserService\UserService.csproj" />
+    <ProjectReference Include="..\UserService.csproj" />
+    <ProjectReference Include="..\..\Common\Common.csproj" />
   </ItemGroup>
 
 </Project>
