Added Validation settings and used it in the validators

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ValidatioSettings": {
+    "PasswordMinLength": 8,
+    "PasswordMaxLength": 64,
+    "EmailMaxLength": 255,
+    "PasswordRequireUppercase": true,
+    "PasswordRequireLowercase": true,
+    "PasswordRequireDigit": true,
+    "PasswordRequireSpecial": true
+  }
 }
