Fix naming in the validationSettings

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,13 +6,14 @@
     }
   },
   "AllowedHosts": "*",
-  "ValidatioSettings": {
+  "ValidationSettings": {
     "PasswordMinLength": 8,
     "PasswordMaxLength": 64,
-    "EmailMaxLength": 255,
     "PasswordRequireUppercase": true,
     "PasswordRequireLowercase": true,
     "PasswordRequireDigit": true,
-    "PasswordRequireSpecial": true
+    "PasswordRequireSpecial": true,
+    "EmailMaxLength": 255,
+    "FullNameMaxLength": 100
   }
 }
