--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CourseDb": "Server=localhost;Database=CourseService;User Id=sa;Password=yourStrong(!)Password;"
+  }
 }
