--- a/CourseService.csproj
+++ b/CourseService.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj" />
-    </ItemGroup>
+    <ProjectReference Include="..\Common.Web\Common.Web.csproj" />
+  </ItemGroup>
 
 </Project>
