--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CourseDb": "Server=localhost;Database=CourseService;User Id=sa;Password=yourStrong(!)Password;"
+    "CourseDb": "Host=localhost;Port=5434;Database=coursesdb;Username=dekel;Password=verysecurecourses"
   }
 }
