--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CourseDb": "Host=localhost;Port=5434;Database=coursesdb;Username=dekel;Password=verysecurecourses"
+  },
+  "Jwt": {
+    "Key": "super_secret_key_1234567890_abcd",
+    "Issuer": "CoursePlatformAuth",
+    "Audience": "CoursePlatformUsers"
   }
 }
