Refactored jwt options setup and dbconnectionstring setup

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,12 +6,16 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "CourseDb": "Host=localhost;Port=5434;Database=coursesdb;Username=dekel;Password=verysecurecourses"
-  },
   "Jwt": {
     "Key": "super_secret_key_1234567890_abcd",
     "Issuer": "CoursePlatformAuth",
     "Audience": "CoursePlatformUsers"
+  },
+  "CourseDb": {
+    "Host": "localhost",
+    "Port": 5434,
+    "Database": "coursesdb",
+    "Username": "dekel",
+    "Password": "verysecurecourses"
   }
 }
