Refactored Token service to use jwt options

--- a/appsettings.json
+++ b/appsettings.json
@@ -15,5 +15,18 @@
     "PasswordRequireSpecial": true,
     "EmailMaxLength": 255,
     "FullNameMaxLength": 100
+  },
+  "AuthDb": {
+    "Host": "localhost",
+    "Port": 5433,
+    "Database": "authdb",
+    "Username": "dekel",
+    "Password": "supersecureauth"
+  },
+  "Jwt": {
+    "Key": "super_secret_key_1234567890_abcd",
+    "Issuer": "CoursePlatformAuth",
+    "Audience": "CoursePlatformUsers",
+    "TokenExpirationMinutes": 60
   }
 }
