--- a/appsettings.json
+++ b/appsettings.json
@@ -28,5 +28,21 @@
     "Issuer": "CoursePlatformAuth",
     "Audience": "CoursePlatformUsers",
     "TokenExpirationMinutes": 60
+  },
+  "Swagger": {
+    "Title": "AuthService API",
+    "Version": "v1",
+    "Description": "Authentication & Authorization endpoints",
+    "EnableUI": true,
+    "RoutePrefix": "swagger",
+    "Auth": {
+      "Enabled": true,
+      "SchemeName": "Bearer",
+      "HeaderName": "Authorization",
+      "Scheme": "bearer",
+      "BearerFormat": "JWT",
+      "In": "Header",
+      "Description": "Paste JWT (no quotes)."
+    }
   }
 }
