--- a/AuthService.csproj
+++ b/AuthService.csproj
@@ -19,6 +19,8 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="9.0.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,5 +30,10 @@
   <ItemGroup>
     <Protobuf Include="..\Common\GrpcContracts\user_service.proto" GrpcServices="Client" />
   </ItemGroup>
+
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>1591</NoWarn> 
+  </PropertyGroup>
 
 </Project>
