--- a/appsettings.json
+++ b/appsettings.json
@@ -17,5 +17,21 @@
     "Database": "coursesdb",
     "Username": "dekel",
     "Password": "verysecurecourses"
+  },
+  "Swagger": {
+    "Title": "CourseService API",
+    "Version": "v1",
+    "Description": "Course & lesson management (search, paging, CRUD).",
+    "EnableUI": true,
+    "RoutePrefix": "swagger",
+    "Auth": {
+      "Enabled": true,
+      "SchemeName": "Bearer",
+      "HeaderName": "Authorization",
+      "Scheme": "bearer",
+      "BearerFormat": "JWT",
+      "In": "Header",
+      "Description": "Paste JWT (no quotes)."
+    }
   }
 }
