--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,33 @@
   "AllowedHosts": "*",
   "ValidationSettings": {
     "PasswordMinLength": 8
+  },
+  "Swagger": {
+    "Title": "UserService API",
+    "Version": "v1",
+    "Description": "Users CRUD & lookup",
+    "EnableUI": true,
+    "RoutePrefix": "swagger",
+    "Auth": {
+      "Enabled": false,
+      "SchemeName": "Bearer",
+      "HeaderName": "Authorization",
+      "Scheme": "bearer",
+      "BearerFormat": "JWT",
+      "In": "Header",
+      "Description": "Paste JWT (no quotes)."
+    }
+  },
+  "UsersDb": {
+    "Host": "localhost",
+    "Port": 5432,
+    "Database": "usersdb",
+    "Username": "dekel",
+    "Password": "strongpass123"
+  },
+  "Jwt": {
+    "Key": "super_secret_key_1234567890_abcd",
+    "Issuer": "CoursePlatformAuth",
+    "Audience": "CoursePlatformUsers"
   }
 }
