Added Enrollment model and DbContext

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EnrollmentDb": {
+    "Host": "localhost",
+    "Port": 5435,
+    "Database": "enrollmentdb",
+    "Username": "dekel",
+    "Password": "ultrasecureenrollment"
+  }
 }
