feat(infra): add messaging infrastructure for message queues
- Add Common.Messaging (MassTransit + RabbitMQ) with DI extension
- Add Enrollments.Contracts (EnrollmentCreatedV1)
- Wire producer in EnrollmentService + configuration
- Add RabbitMQ docker-compose
- Add Swagger setup

--- a/EnrollmentService/appsettings.json
+++ b/EnrollmentService/appsettings.json
@@ -12,5 +12,36 @@
     "Database": "enrollmentdb",
     "Username": "dekel",
     "Password": "ultrasecureenrollment"
+  },
+  "Rabbit": {
+    "Host": "localhost",
+    "VirtualHost": "/",
+    "User": "guest",
+    "Password": "guest",
+    "Port": 5672,
+    "UseSsl": false
+  },
+  "MassTransit": {
+    "UseKebabCaseEndpoints": true,
+    "PrefetchCount": 32,
+    "RetryCount": 5,
+    "RetryInitialSeconds": 1,
+    "RetryIncrementSeconds": 2
+  },
+  "Swagger": {
+    "Title": "EnrollmentService API",
+    "Version": "v1",
+    "Description": "Course enrollments management (search, paging, CRUD).",
+    "EnableUI": true,
+    "RoutePrefix": "swagger",
+    "Auth": {
+      "Enabled": true,
+      "SchemeName": "Bearer",
+      "HeaderName": "Authorization",
+      "Scheme": "bearer",
+      "BearerFormat": "JWT",
+      "In": "Header",
+      "Description": "Paste JWT (no quotes)."
+    }
   }
 }
