--- a/EnrollmentService/EnrollmentService.csproj
+++ b/EnrollmentService/EnrollmentService.csproj
@@ -23,6 +23,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Common.Web\Common.Web.csproj" />
     <ProjectReference Include="..\Contracts\Enrollments.Contracts\Enrollments.Contracts.csproj" />
+    <ProjectReference Include="..\Contracts\Users.Contracts\Users.Contracts.csproj" />
+    <ProjectReference Include="..\Contracts\Courses.Contracts\Courses.Contracts.csproj" />
     <ProjectReference Include="..\src\Common.Messaging\Common.Messaging.csproj" />
   </ItemGroup>
 
