(feature courseservice) First working consumers and producers, but refactor is needed

--- a/CourseService/appsettings.json
+++ b/CourseService/appsettings.json
@@ -33,5 +33,20 @@
       "In": "Header",
       "Description": "Paste JWT (no quotes)."
     }
+  },
+  "Rabbit": {
+    "Host": "localhost",
+    "VirtualHost": "/",
+    "User": "guest",
+    "Password": "guest",
+    "Port": 5672,
+    "UseSsl": false
+  },
+  "MassTransit": {
+    "UseKebabCaseEndpoints": true,
+    "PrefetchCount": 32,
+    "RetryCount": 5,
+    "RetryInitialSeconds": 1,
+    "RetryIncrementSeconds": 2
   }
 }
