--- a/UserService/UserService.csproj
+++ b/UserService/UserService.csproj
@@ -29,6 +29,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Common.Web\Common.Web.csproj" />
+    <ProjectReference Include="..\Contracts\Users.Contracts\Users.Contracts.csproj" />
+    <ProjectReference Include="..\src\Common.Messaging\Common.Messaging.csproj" />
   </ItemGroup>
 
   <ItemGroup>
