(refactor orderservice) First wokring design of clean architecture and Domain DrivenDesign

--- a/OrderService/Web.Api/appsettings.json
+++ b/OrderService/Web.Api/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OrdersDb": {
+    "Host": "localhost",
+    "Database": "ordersdb",
+    "Port": 5436,
+    "Username": "dekel",
+    "Password": "ultrasecureenrollment"
+  }
 }
