--- a/src/OrderService/Infrastructure/Infrastructure.csproj
+++ b/src/OrderService/Infrastructure/Infrastructure.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Contracts\Users.Contracts\Users.Contracts.csproj" />
     <ProjectReference Include="..\Application\Application.csproj" />
   </ItemGroup>
 
