--- a/src/OrderService/Infrastructure/Infrastructure.csproj
+++ b/src/OrderService/Infrastructure/Infrastructure.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="9.0.0" />
     <PackageReference Include="EFCore.NamingConventions" Version="9.0.0" />
+    <PackageReference Include="MassTransit" Version="8.5.2" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.8">
@@ -23,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Contracts\Users.Contracts\Users.Contracts.csproj" />
+    <ProjectReference Include="..\..\Shared\Messaging\Messaging.csproj" />
     <ProjectReference Include="..\Application\Application.csproj" />
   </ItemGroup>
 
