--- a/src/UserService/UserService.csproj
+++ b/src/UserService/UserService.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -28,12 +28,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Common.Web\Common.Web.csproj" />
-    <ProjectReference Include="..\Contracts\Users.Contracts\Users.Contracts.csproj" />
-    <ProjectReference Include="..\src\Common.Messaging\Common.Messaging.csproj" />
+	  <ProjectReference Include="..\Shared\Kernel\Kernel.csproj" />
+	  <ProjectReference Include="..\..\Common\Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-  <Protobuf Include="..\Common\GrpcContracts\user_service.proto" GrpcServices="Server" />
+   <Protobuf Include="..\..\Common\GrpcContracts\user_service.proto" GrpcServices="Server" />
   </ItemGroup>
+
 </Project>
