(refactor orderservice) changed domain events into async messaging logics implementation

--- a/src/OrderService/Web.Api/appsettings.json
+++ b/src/OrderService/Web.Api/appsettings.json
@@ -12,5 +12,11 @@
     "Port": 5436,
     "Username": "dekel",
     "Password": "ultrasecureenrollment"
+  },
+  "RabbitMq": {
+    "Host": "localhost",
+    "Port": 5672,
+    "Username": "guest",
+    "Password":  "guest"
   }
 }
