--- a/src/OrderService/Application/Application.csproj
+++ b/src/OrderService/Application/Application.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\Kernel\Kernel.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\Order.Contracts\Orders.Contracts.csproj" />
   </ItemGroup>
 
   <ItemGroup>
