--- a/src/OrderService/Application/Application.csproj
+++ b/src/OrderService/Application/Application.csproj
@@ -14,9 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Contracts\Order.Contracts\Orders.Contracts.csproj" />
     <ProjectReference Include="..\..\Shared\Kernel\Kernel.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
-    <ProjectReference Include="..\Order.Contracts\Orders.Contracts.csproj" />
   </ItemGroup>
 
   <ItemGroup>
