--- a/src/OrderService/Web.Api/Web.Api.csproj
+++ b/src/OrderService/Web.Api/Web.Api.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2" />
+    <PackageReference Include="NetArchTest.Rules" Version="1.3.2" />
     <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.8">
