(refactor orderservice) switched into connection strings

--- a/src/OrderService/Web.Api/appsettings.json
+++ b/src/OrderService/Web.Api/appsettings.json
@@ -6,17 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "OrdersDb": {
-    "Host": "localhost",
-    "Database": "ordersdb",
-    "Port": 5436,
-    "Username": "dekel",
-    "Password": "ultrasecureenrollment"
-  },
-  "RabbitMq": {
-    "Host": "localhost",
-    "Port": 5672,
-    "Username": "guest",
-    "Password":  "guest"
+  "ConnectionStrings": {
+    "Database": "Host=localhost;Port=5436;Database=ordersdb;Username=dekel;Password=ultrasecureenrollment",
+    "RabbitMq": "amqp://guest:guest@localhost:5672/"
   }
 }
