--- a/src/OrderService/Web.Api/appsettings.json
+++ b/src/OrderService/Web.Api/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Database": "Host=localhost;Port=5436;Database=ordersdb;Username=dekel;Password=ultrasecureenrollment",
+    "WriteDatabase": "Host=localhost;Port=5436;Database=ordersdb;Username=dekel;Password=ultrasecureenrollment",
+    "ReadDatabase": "Host=localhost;Port=5436;Database=ordersdb;Username=dekel;Password=ultrasecureenrollment",
     "RabbitMq": "amqp://guest:guest@localhost:5672/"
   }
 }
