(test orderservice) added order submitted handler test

--- a/src/OrderService/Tests/Application.UnitTests/Application.UnitTests/Application.UnitTests.csproj
+++ b/src/OrderService/Tests/Application.UnitTests/Application.UnitTests/Application.UnitTests.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\Contracts\Order.Contracts\Orders.Contracts.csproj" />
     <ProjectReference Include="..\..\..\Application\Application.csproj" />
   </ItemGroup>
 
