--- a/src/UserService/UserService.csproj
+++ b/src/UserService/UserService.csproj
@@ -28,12 +28,15 @@
   </ItemGroup>
 
   <ItemGroup>
-	  <ProjectReference Include="..\Shared\Kernel\Kernel.csproj" />
 	  <ProjectReference Include="..\..\Common\Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
    <Protobuf Include="..\..\Common\GrpcContracts\user_service.proto" GrpcServices="Server" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
