--- a/src/UserService/Src/Web.Api/appsettings.json
+++ b/src/UserService/Src/Web.Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ReadDatabase": "Host=localhost;Port=5432;Database=usersdb;Username=dekel;Password=strongpass123;",
+    "WriteDatabase": "Host=localhost;Port=5432;Database=usersdb;Username=dekel;Password=strongpass123;"
+  }
 }
