(refactor userservice) Added first feature in clean architecture and ddd

--- a/src/UserService/Src/Application/Application.csproj
+++ b/src/UserService/Src/Application/Application.csproj
@@ -10,4 +10,13 @@
     <Folder Include="Abstractions\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\Kernel\Kernel.csproj" />
+    <ProjectReference Include="..\Domain\Domain.csproj" />
+  </ItemGroup>
+
 </Project>
