--- a/src/UserService/Src/Web.Api/appsettings.json
+++ b/src/UserService/Src/Web.Api/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ReadDatabase": "Host=localhost;Port=5432;Database=usersdb;Username=dekel;Password=strongpass123;",
-    "WriteDatabase": "Host=localhost;Port=5432;Database=usersdb;Username=dekel;Password=strongpass123;"
+    "WriteDatabase": "Host=localhost;Port=5432;Database=usersdb;Username=dekel;Password=strongpass123;",
+    "RabbitMq": "amqp://guest:guest@localhost:5672/"
   }
 }
