Fixed agent mistakes

--- a/src/AuthService/Web.Api/appsettings.json
+++ b/src/AuthService/Web.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Database": "Host=localhost;Database=authdb;Username=postgres;Password=postgres",
+    "Database": "Host=localhost;Port=5433;Database=authdb;Username=dekel;Password=supersecureauth",
     "RabbitMq": "amqp://guest:guest@localhost:5672"
   },
   "Jwt": {
