(refactor authservice) updated user contract and removed old design

--- a/src/AuthService/Infrastructure/Infrastructure.csproj
+++ b/src/AuthService/Infrastructure/Infrastructure.csproj
@@ -29,4 +29,8 @@
     <ProjectReference Include="..\..\..\Contracts\Users.Contracts\Users.Contracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="MassTransit\Consumers\" />
+  </ItemGroup>
+
 </Project>
