--- a/src/UserService/Infrastructure/Infrastructure.csproj
+++ b/src/UserService/Infrastructure/Infrastructure.csproj
@@ -26,7 +26,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Contracts\Auth.Contracts\Auth.Contracts.csproj" />
+    <ProjectReference Include="..\..\..\Contracts\Auth.Contracts\Auth.Contracts.csproj" />
+    <ProjectReference Include="..\Application\Application.csproj" />
   </ItemGroup>
 
 </Project>
