Feature/userservice/add event consumers (#129)
* (feature orderservice) uncommented section

* (test orderservice) added order aggregate unit tests

* (refactor orderservice) reorganized folder structure

* (feature userservice) Added event dispatcher

* (feature userservice) Remove old implementation of the userservice

--- a/src/UserService/Domain/Domain.csproj
+++ b/src/UserService/Domain/Domain.csproj
@@ -13,8 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Shared\Kernel\Kernel.csproj" />
-    <ProjectReference Include="..\..\SharedKernel\SharedKernel.csproj" />
+    <ProjectReference Include="..\..\Shared\Kernel\Kernel.csproj" />
+    <ProjectReference Include="..\SharedKernel\SharedKernel.csproj" />
   </ItemGroup>
 
 </Project>
