--- a/src/UserService/Tests/UserService.IntegrationTests/UserService.IntegrationTests.csproj
+++ b/src/UserService/Tests/UserService.IntegrationTests/UserService.IntegrationTests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Web.Api\Web.Api.csproj" />
+    <ProjectReference Include="..\..\Web.Api\User.Api.csproj" />
   </ItemGroup>
 
 </Project>
