--- a/CoursePlatform.AppHost/CoursePlatform.AppHost.csproj
+++ b/CoursePlatform.AppHost/CoursePlatform.AppHost.csproj
@@ -24,6 +24,8 @@
         <ProjectReference Include="..\src\CourseService\Web.Api\Course.Api.csproj">
         </ProjectReference>
 
+        <ProjectReference Include="..\src\EnrollmentService\Web.Api\Enrollments.Api.csproj" />
+
         <ProjectReference Include="..\src\UserService\Web.Api\User.Api.csproj">
         </ProjectReference>
     </ItemGroup>
