--- a/src/AuthService/Web.Api/appsettings.json
+++ b/src/AuthService/Web.Api/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Database": "Host=localhost;Port=5433;Database=authdb;Username=dekel;Password=supersecureauth",
+    "WriteDatabase": "Host=localhost;Port=5433;Database=authdb;Username=dekel;Password=supersecureauth",
+    "ReadDatabase": "Host=localhost;Port=5433;Database=authdb;Username=dekel;Password=supersecureauth",
     "RabbitMq": "amqp://guest:guest@localhost:5672"
   },
   "RefreshToken": {
