feat(gatewayapi): updated the project configuration in order to work with aspire

--- a/Gateway.Api/appsettings.json
+++ b/Gateway.Api/appsettings.json
@@ -19,39 +19,62 @@
       },
       "users-route": {
         "ClusterId": "userservice",
-        "AuthorizationPolicy": "AuthenticatedUser",
+        //"AuthorizationPolicy": "AuthenticatedUser",
         "Match": {
           "Path": "/api/users/{**catch-all}"
         }
       },
       "orders-route": {
         "ClusterId": "orderservice",
-        "AuthorizationPolicy": "AuthenticatedUser",
+        //"AuthorizationPolicy": "AuthenticatedUser",
         "Match": {
           "Path": "/api/orders/{**catch-all}"
         }
       },
       "courses-route": {
         "ClusterId": "courseservice",
-        "AuthorizationPolicy": "AuthenticatedUser",
+        //"AuthorizationPolicy": "AuthenticatedUser",
         "Match": {
           "Path": "/api/courses/{**catch-all}"
         }
       },
       "lessons-route": {
         "ClusterId": "courseservice",
-        "AuthorizationPolicy": "AuthenticatedUser",
+        //"AuthorizationPolicy": "AuthenticatedUser",
         "Match": {
           "Path": "/api/lessons/{**catch-all}"
         }
       }
     },
-
     "Clusters": {
-      "authservice": { "Destinations": {} },
-      "userservice": { "Destinations": {} },
-      "orderservice": { "Destinations": {} },
-      "courseservice": { "Destinations": {} }
+      "authservice": {
+        "Destinations": {
+          "any_name": {
+            "Address": "https://authservice"
+          }
+        }
+      },
+      "userservice": {
+        "Destinations": {
+          "any_name": {
+            "Address": "https://userservice"
+          }
+        }
+      },
+      "orderservice": {
+        "Destinations": {
+          "any_name": {
+            "Address": "https://orderservice"
+          }
+        }
+      },
+      "courseservice": {
+        "Destinations": {
+          "any_name": {
+            "Address": "https://courseservice"
+          }
+        }
+      }
     }
   }
 }
