refactor(servicedefaults, kernel): moved auth contracts into kernel

--- a/src/Shared/Tests/Kernel.UnitTests/Kernel.UnitTests.csproj
+++ b/src/Shared/Tests/Kernel.UnitTests/Kernel.UnitTests.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\CoursePlatform.ServiceDefaults\CoursePlatform.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\..\Kernel\Kernel.csproj" />
   </ItemGroup>
 
   <ItemGroup>
