feat(authservice): added user add permission use case

--- a/src/AuthService/Application/Application.csproj
+++ b/src/AuthService/Application/Application.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\..\..\Contracts\Auth.Contracts\Auth.Contracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="AuthUsers\Commands\UserRemovePermission\" />
+  </ItemGroup>
+
 </Project>
