--- a/src/AuthService/Tests/Infrastructure.IntegrationTests/Infrastructure.IntegrationTests.csproj
+++ b/src/AuthService/Tests/Infrastructure.IntegrationTests/Infrastructure.IntegrationTests.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Testcontainers" Version="4.8.1" />
     <PackageReference Include="Testcontainers.PostgreSql" Version="4.8.1" />
     <PackageReference Include="Testcontainers.RabbitMq" Version="4.8.1" />
+    <PackageReference Include="Testcontainers.Redis" Version="4.8.1" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
       <PrivateAssets>all</PrivateAssets>
