--- a/Gateway.Api/Gateway.Api.csproj
+++ b/Gateway.Api/Gateway.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspire.StackExchange.Redis" Version="13.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.11" />
 	<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.ServiceDiscovery.Yarp" Version="10.0.0" />
@@ -14,7 +15,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Contracts\Auth.Contracts\Auth.Contracts.csproj" />
     <ProjectReference Include="..\CoursePlatform.ServiceDefaults\CoursePlatform.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\src\Shared\Kernel\Kernel.csproj" />
   </ItemGroup>
 
 </Project>
