--- a/Gateway.Api/Gateway.Api.csproj
+++ b/Gateway.Api/Gateway.Api.csproj
@@ -7,17 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="9.0.7" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.7" />
-	<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
-	<PackageReference Include="EFCore.NamingConventions" Version="9.0.0" />
+    <PackageReference Include="Aspire.StackExchange.Redis" Version="13.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.11" />
 	<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.ServiceDiscovery.Yarp" Version="10.0.0" />
     <PackageReference Include="Yarp.ReverseProxy" Version="2.3.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Contracts\Auth.Contracts\Auth.Contracts.csproj" />
     <ProjectReference Include="..\CoursePlatform.ServiceDefaults\CoursePlatform.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\src\Shared\Kernel\Kernel.csproj" />
   </ItemGroup>
 
 </Project>
