--- a/src/AuthService/Infrastructure/Infrastructure.csproj
+++ b/src/AuthService/Infrastructure/Infrastructure.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Database\Migrations\" />
     <Folder Include="MassTransit\Consumers\" />
   </ItemGroup>
 
