--- a/src/AuthService/Tests/Application.UnitTests/Application.UnitTests.csproj
+++ b/src/AuthService/Tests/Application.UnitTests/Application.UnitTests.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\..\Application\Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\Queries\" />
+  </ItemGroup>
+
 </Project>
