feat(authservice): integrate Keycloak and implement centralized user enrichment infrastructure

--- a/Gateway.Api/appsettings.json
+++ b/Gateway.Api/appsettings.json
@@ -7,6 +7,10 @@
       "Microsoft.AspNetCore.Authorization": "Debug"
     }
   },
+  "Jwt": {
+    "Authority": "http://localhost:8080/realms/course-platform",
+    "Audience": "course-platform"
+  },
   "AllowedHosts": "*",
   "ReverseProxy": {
     "Routes": {
