--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,8 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "oidc-client-ts": "^3.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-oidc-context": "^3.3.0",
     "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
