--- a/src/AuthService/Application/Application.csproj
+++ b/src/AuthService/Application/Application.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\..\..\Contracts\Auth.Contracts\Auth.Contracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="AuthUsers\Queries\" />
+  </ItemGroup>
+
 </Project>
