feat(authservice): added di for the token provider

--- a/src/AuthService/Web.Api/appsettings.json
+++ b/src/AuthService/Web.Api/appsettings.json
@@ -11,12 +11,8 @@
     "ReadDatabase": "Host=localhost;Port=5433;Database=authdb;Username=dekel;Password=supersecureauth",
     "RabbitMq": "amqp://guest:guest@localhost:5672"
   },
-  "RefreshToken": {
-    "ExpirationDays": "7"
-  },
-  "CookieSettings": {
-    "Secure": true,
-    "HttpOnly": true,
-    "SameSite": "Strict"
+  "Jwt": {
+    "Issuer": "course-platform-auth",
+    "Audience": "course-platform-internal"
   }
 }
