--- a/src/AuthService/Web.Api/appsettings.json
+++ b/src/AuthService/Web.Api/appsettings.json
@@ -11,7 +11,7 @@
     "ReadDatabase": "Host=localhost;Port=5433;Database=authdb;Username=dekel;Password=supersecureauth",
     "RabbitMq": "amqp://guest:guest@localhost:5672"
   },
-  "Jwt": {
+  "InternalToken": {
     "Issuer": "course-platform-auth",
     "Audience": "course-platform-internal"
   }
