bugfix(authservice): fixed a bug with the correct di for redis and the keymanager

--- a/src/AuthService/Web.Api/appsettings.json
+++ b/src/AuthService/Web.Api/appsettings.json
@@ -14,5 +14,9 @@
   "InternalToken": {
     "Issuer": "course-platform-auth",
     "Audience": "course-platform-internal"
+  },
+  "Keycloak": {
+    "Authority": "http://localhost:8080/realms/course-platform",
+    "Audience": "course-platform"
   }
 }
