feat(authservice): now posts integration event of user registering

--- a/src/AuthService/Application/Auth.Application.csproj
+++ b/src/AuthService/Application/Auth.Application.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Contracts\CoursePlatform.Contracts.csproj" />
     <ProjectReference Include="..\..\..\CoursePlatform.ServiceDefaults\CoursePlatform.ServiceDefaults.csproj" />
     <ProjectReference Include="..\Domain\Auth.Domain.csproj" />
   </ItemGroup>
