feat(authservice): add get role by name endpoint

--- a/src/AuthService/Application/Auth.Application.csproj
+++ b/src/AuthService/Application/Auth.Application.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Domain\Auth.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Roles\Queries\Dtos\" />
+  </ItemGroup>
+
 </Project>
