feat(gateway): extracted swagger extension to service defaults and added to gateway

--- a/Gateway.Api/appsettings.json
+++ b/Gateway.Api/appsettings.json
@@ -14,6 +14,15 @@
   "AllowedHosts": "*",
   "ReverseProxy": {
     "Routes": {
+      "auth-swagger": {
+        "ClusterId": "authservice",
+        "Match": {
+          "Path": "/api/auth/swagger/{**catch-all}"
+        },
+        "Transforms": [
+          { "PathRemovePrefix": "/api/auth" }
+        ]
+      },
       "auth-route": {
         "ClusterId": "authservice",
         "Match": {
