feat(courseservice): use mediator (#340)
* feat(courseservice): updated course for better efficency

* feat(courseservice): added enrollment configuration and enrollment create factory through course

* feat(courseservice): added index for enrollment configuration

* feat(courseservice): add the usage of the mediator

--- a/src/CourseService/Application/Courses.Application.csproj
+++ b/src/CourseService/Application/Courses.Application.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\CoursePlatform.ServiceDefaults\CoursePlatform.ServiceDefaults.csproj" />
     <ProjectReference Include="..\Domain\Courses.Domain.csproj" />
   </ItemGroup>
 
