feat(courseservice): added cross cutting logging behavior

--- a/src/CourseService/Application/Courses.Application.csproj
+++ b/src/CourseService/Application/Courses.Application.csproj
@@ -11,12 +11,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Lessons\" />
+    <ProjectReference Include="..\..\..\CoursePlatform.ServiceDefaults\CoursePlatform.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\Domain\Courses.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\CoursePlatform.ServiceDefaults\CoursePlatform.ServiceDefaults.csproj" />
-    <ProjectReference Include="..\Domain\Courses.Domain.csproj" />
+    <Folder Include="Behaviors\" />
   </ItemGroup>
 
 </Project>
