--- a/Gateway.Api/appsettings.json
+++ b/Gateway.Api/appsettings.json
@@ -77,35 +77,48 @@
         "Transforms": [
           { "PathRemovePrefix": "/api" }
         ]
+      },
+      "s3-storage": {
+        "ClusterId": "garage-cluster",
+        "Match": {
+          "Path": "/courses-media/{**remainder}"
+        }
+      }
+    }
+  },
+  "Clusters": {
+    "authservice": {
+      "Destinations": {
+        "any_name": {
+          "Address": "https://authservice"
+        }
       }
     },
-    "Clusters": {
-      "authservice": {
-        "Destinations": {
-          "any_name": {
-            "Address": "https://authservice"
-          }
+    "userservice": {
+      "Destinations": {
+        "any_name": {
+          "Address": "https://userservice"
         }
-      },
-      "userservice": {
-        "Destinations": {
-          "any_name": {
-            "Address": "https://userservice"
-          }
+      }
+    },
+    "orderservice": {
+      "Destinations": {
+        "any_name": {
+          "Address": "https://orderservice"
         }
-      },
-      "orderservice": {
-        "Destinations": {
-          "any_name": {
-            "Address": "https://orderservice"
-          }
+      }
+    },
+    "courseservice": {
+      "Destinations": {
+        "any_name": {
+          "Address": "https://courseservice"
         }
-      },
-      "courseservice": {
-        "Destinations": {
-          "any_name": {
-            "Address": "https://courseservice"
-          }
+      }
+    },
+    "garage-cluster": {
+      "Destinations": {
+        "destination1": {
+          "Address": "http://garage:3900"
         }
       }
     }
