--- a/src/CourseService/Web.Api/Courses.Api.csproj
+++ b/src/CourseService/Web.Api/Courses.Api.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\CoursePlatform.ServiceDefaults\CoursePlatform.ServiceDefaults.csproj" />
     <ProjectReference Include="..\Infrastructure\Courses.Infrastructure.csproj" />
   </ItemGroup>
 
