feat(storageservice): now it streams object

--- a/Gateway.Api/appsettings.json
+++ b/Gateway.Api/appsettings.json
@@ -14,6 +14,21 @@
   "AllowedHosts": "*",
   "ReverseProxy": {
     "Routes": {
+      "storage-public-route": {
+        "ClusterId": "garage-website-cluster",
+        "Match": {
+          "Path": "/public/{bucket}/{**remainder}"
+        },
+        "Transforms": [
+          {
+            "RequestHeader": "Host",
+            "Set": "{bucket}"
+          },
+          {
+            "PathSet": "/{remainder}"
+          }
+        ]
+      },
       "auth-swagger": {
         "ClusterId": "authservice",
         "Match": {
@@ -86,6 +101,13 @@
       }
     },
     "Clusters": {
+      "garage-website-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "placeholder"
+          }
+        }
+      },
       "authservice": {
         "Destinations": {
           "any_name": {
