feat(courseservice): storage events consumption (#377)
* feat(courseservice): better masstransit injection

* feat(courseservice): registered event handlers using mediator

* feat(storageservice): now it streams object

--- a/Gateway.Api/appsettings.json
+++ b/Gateway.Api/appsettings.json
@@ -14,6 +14,21 @@
   "AllowedHosts": "*",
   "ReverseProxy": {
     "Routes": {
+      "storage-public-route": {
+        "ClusterId": "garage-website-cluster",
+        "Match": {
+          "Path": "/public/{bucket}/{**remainder}"
+        },
+        "Transforms": [
+          {
+            "RequestHeader": "Host",
+            "Set": "{bucket}"
+          },
+          {
+            "PathSet": "/{remainder}"
+          }
+        ]
+      },
       "auth-swagger": {
         "ClusterId": "authservice",
         "Match": {
@@ -84,41 +99,48 @@
           "Path": "/courses-media/{**remainder}"
         }
       }
-    }
-  },
-  "Clusters": {
-    "authservice": {
-      "Destinations": {
-        "any_name": {
-          "Address": "https://authservice"
-        }
-      }
     },
-    "userservice": {
-      "Destinations": {
-        "any_name": {
-          "Address": "https://userservice"
+    "Clusters": {
+      "garage-website-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "placeholder"
+          }
         }
-      }
-    },
-    "orderservice": {
-      "Destinations": {
-        "any_name": {
-          "Address": "https://orderservice"
+      },
+      "authservice": {
+        "Destinations": {
+          "any_name": {
+            "Address": "https://authservice"
+          }
         }
-      }
-    },
-    "courseservice": {
-      "Destinations": {
-        "any_name": {
-          "Address": "https://courseservice"
+      },
+      "userservice": {
+        "Destinations": {
+          "any_name": {
+            "Address": "https://userservice"
+          }
         }
-      }
-    },
-    "garage-cluster": {
-      "Destinations": {
-        "destination1": {
-          "Address": "http://garage:3900"
+      },
+      "orderservice": {
+        "Destinations": {
+          "any_name": {
+            "Address": "https://orderservice"
+          }
+        }
+      },
+      "courseservice": {
+        "Destinations": {
+          "any_name": {
+            "Address": "https://courseservice"
+          }
+        }
+      },
+      "garage-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://garage:3900"
+          }
         }
       }
     }
