feat(courseplatform): added central packages version control

--- a/src/AuthService/Infrastructure/Auth.Infrastructure.csproj
+++ b/src/AuthService/Infrastructure/Auth.Infrastructure.csproj
@@ -1,12 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <UserSecretsId>ee97eab9-e53f-4b54-8500-42cbd2fa8ac0</UserSecretsId>
-  </PropertyGroup>
-
   <ItemGroup>
     <InternalsVisibleTo Include="Infrastructure.UnitTests" />
     <InternalsVisibleTo Include="Infrastructure.IntegrationTests" />
@@ -29,7 +22,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions"/>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
   </ItemGroup>
 
