--- a/src/AuthService/Web.Api/Auth.Api.csproj
+++ b/src/AuthService/Web.Api/Auth.Api.csproj
@@ -1,12 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>dceaacd7-56bc-4a4b-b2f1-3e82aba574a0</UserSecretsId>
-  </PropertyGroup>
-
+    <PropertyGroup>
+	    <UserSecretsId>dceaacd7-56bc-4a4b-b2f1-3e82aba574a0</UserSecretsId>
+    </PropertyGroup>
+	
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
