--- a/src/AuthService/Application/Auth.Application.csproj
+++ b/src/AuthService/Application/Auth.Application.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
-    <PackageReference Include="Scrutor" Version="7.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="Scrutor" />
   </ItemGroup>
 
   <ItemGroup>
